Updated the layout and added new content

--- a/about.html
+++ b/about.html
@@ -1316,7 +1316,7 @@
             <nav class="navbar">
                 <a href="index.html" class="logo">
                     <!-- REAL LOGO - Replace the image URL with your actual logo -->
-                    <img src="https://via.placeholder.com/180x60/1a472a/ffffff?text=Run+Whisperers+Logo" alt="Run Whisperers Cricket Academy Logo" class="logo-image">
+                    <img src="./images/logo.png" alt="Run Whisperers Cricket Academy Logo" class="logo-image">
                     <!-- Fallback text logo (shown if image fails to load) -->
                     <div class="logo-text">
                         <span class="logo-main">RUN WHISPERERS</span>
@@ -1732,7 +1732,7 @@
                 <div class="footer-logo-section">
                     <a href="index.html" class="footer-logo">
                         <!-- REAL LOGO - Same logo as header but white version -->
-                        <img src="https://via.placeholder.com/160x50/ffffff/1a472a?text=Run+Whisperers" alt="Run Whisperers Cricket Academy Logo" class="logo-image">
+                        <img src="./images/logo.png" alt="Run Whisperers Cricket Academy Logo" class="logo-image">
                         <div class="logo-text">
                             <span class="logo-main">RUN WHISPERERS</span>
                             <span class="logo-sub">Cricket • Academy • Community</span>
