Updated the layout and added new content

--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@
                 
                 <div class="intro-image">
                     <div class="image-frame">
-                        <img src="https://images.unsplash.com/photo-1531415074968-036ba1b575da?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Cricket team celebration">
+                        <img src="./images/cricket-match-with-player.jpg" alt="Cricket team celebration">
                     </div>
                 </div>
             </div>
@@ -1377,7 +1377,7 @@
                         <span class="date-month">JUN</span>
                     </div>
                     <div class="event-image">
-                        <img src="https://images.unsplash.com/photo-1531415074968-036ba1b575da?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Cricket tournament">
+                        <img src="./images/International.jpg" alt="Cricket tournament">
                     </div>
                     <div class="event-content">
                         <h3 class="event-title">Namibia National Cup</h3>
@@ -1396,7 +1396,7 @@
                         <span class="date-month">JUL</span>
                     </div>
                     <div class="event-image">
-                        <img src="https://images.unsplash.com/photo-1595435742681-2f8a4d75a7b0?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80" alt="International cricket">
+                        <img src="./images/south africa.webp" alt="International cricket">
                     </div>
                     <div class="event-content">
                         <h3 class="event-title">South Africa Tour</h3>
@@ -1415,7 +1415,7 @@
                         <span class="date-month">AUG</span>
                     </div>
                     <div class="event-image">
-                        <img src="https://images.unsplash.com/photo-1593352216925-d1f8c46e2c4a?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80" alt="Zimbabwe cricket">
+                        <img src="./images/Zimbabwe.jpg" alt="Zimbabwe cricket">
                     </div>
                     <div class="event-content">
                         <h3 class="event-title">Zimbabwe Challenge Cup</h3>
@@ -1580,7 +1580,7 @@
             
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1593352216925-d1f8c46e2c4a?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80" alt="Cricket match action">
+                    <img src="./images/Namibia 1.jpeg" alt="Cricket match action">
                     <div class="gallery-overlay">
                         <div class="gallery-text">
                             <h3>Match Action</h3>
